<resources>
    <string name="app_name">CaculatorApp</string>
    <string name="mod">%</string>
    <string name="bracket1">(</string>
    <string name="bracket2">)</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="add_sub">+/-</string>
    <string name="C">C</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="login_but">LogIn</string>
    <string name="signUp_btn">Sign Up</string>
    <string name="rememberMe_checkBox">Remember me</string>
    <string name="forgetPass">Forget Password?</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_pass">Password</string>
</resources>