<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232222">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
       >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:padding="20dp">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/mod"
                android:textColor="@color/black"
                android:textSize="35dp"
                android:background="@drawable/rounded_wight_button"
                 android:layout_margin="5dp">

            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="35dp"
                android:background="@drawable/rounded_gray_button"
                 android:layout_margin="5dp">

            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="35dp"
                android:background="@drawable/rounded_gray_button"
                 android:layout_margin="5dp">

            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="35dp"
                android:background="@drawable/rounded_gray_button"
                 android:layout_margin="5dp">

            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/C"
                android:textColor="@color/white"
                android:textSize="35dp"
                android:background="@drawable/rounded_gray_button"
                android:layout_margin="5dp">

            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/bracket1"
                android:textColor="@color/black"
                android:textSize="35dp"
                android:background="@drawable/rounded_wight_button"
                android:layout_margin="5dp">

            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="35dp"
                android:background="@drawable/rounded_gray_button"
                android:layout_margin="5dp">

            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="35dp"
                android:background="@drawable/rounded_gray_button"
                android:layout_margin="5dp">

            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="35dp"
                android:background="@drawable/rounded_gray_button"
                android:layout_margin="5dp">

            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="35dp"
                android:background="@drawable/rounded_gray_button"
                android:layout_margin="5dp">

            </Button>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/bracket2"
                android:textColor="@color/black"
                android:textSize="35dp"
                android:background="@drawable/rounded_wight_button"
                android:layout_margin="5dp">

            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="35dp"
                android:background="@drawable/rounded_gray_button"
                android:layout_margin="5dp">

            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="35dp"
                android:background="@drawable/rounded_gray_button"
                android:layout_margin="5dp">

            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="35dp"
                android:background="@drawable/rounded_gray_button"
                android:layout_margin="5dp">

            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="55dp"
                android:background="@drawable/rounded_gray_button"
                android:layout_margin="5dp">

            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/add_sub"
                android:textColor="@color/white"
                android:textSize="35dp"
                android:background="@drawable/round_button"
                android:layout_margin="5dp">

            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="35dp"
                android:background="@drawable/round_button"
                android:layout_margin="5dp">

            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="35dp"
                android:background="@drawable/round_button"
                android:layout_margin="5dp">

            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="35dp"
                android:background="@drawable/round_button"
                android:layout_margin="5dp">

            </Button>


        </LinearLayout>



    </LinearLayout>

</LinearLayout>